--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.google.firebase:firebase-database:16.1.0'
     implementation 'com.facebook.android:facebook-login:[5,6)'
+    implementation 'com.google.android.gms:play-services-fitness:18.0.0'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
     //implementation 'com.google.android.gms:play-services-auth:11.6.2'
     testImplementation 'junit:junit:4.12'
 }
