--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.jieun.cardiocare"
-        minSdkVersion 23
+        minSdkVersion 28
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-fitness:18.0.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     //implementation 'com.google.android.gms:play-services-auth:11.6.2'
+    //implementation 'com.github.hadiidbouk:ChartProgressBar-Android:2.0.6'
     testImplementation 'junit:junit:4.12'
 }
 
