--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    aaptOptions {
+        noCompress "tflite"
+    }
 }
 
 dependencies {
@@ -31,7 +34,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.google.firebase:firebase-database:16.1.0'
     implementation 'com.facebook.android:facebook-login:[5,6)'
-    //implementation 'com.google.android.gms:play-services-auth:11.6.2'
+    implementation 'org.tensorflow:tensorflow-lite:+'
     testImplementation 'junit:junit:4.12'
 }
 
