--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HeartGraphActivity"></activity>
-        <activity android:name=".HeartActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".HeartGraphActivity" />
+        <activity android:name=".HeartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
